--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" 
+  <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Mesto</title>
@@ -10,7 +10,7 @@
 <body class="page">
 <div class="page__content">
   <header class="header page__section">
-    <img src="<%=require('./images/logo.svg')%>" alt="Логотип проекта место" class="logo header__logo">
+    <img src="<%=require('./images/logo.svg')%>" alt="Логотип проекта масто" class="logo header__logo">
   </header>
   <main class="content">
     <section class="profile page__section">
@@ -36,12 +36,12 @@
     <div class="popup__content">
       <button type="button" class="popup__close"></button>
       <h3 class="popup__title">Редактировать профиль</h3>
-      <form class="popup__form" name="edit-profile">
-        <input type="text" id="name" name="name" class="popup__input popup__input_type_name" placeholder="Имя" minlength="2" maxlength="40" required>
-        <span class="popup__input-error name-input-error"></span>
-        <input type="text" id="description" name="description" class="popup__input popup__input_type_description" placeholder="Занятие" minlength="2" maxlength="400" required>
-        <span class="popup__input-error description-input-error"></span>
-        <button type="submit" class="button popup__button" disabled>Сохранить</button>
+      <form class="popup__form" name="edit-profile" novalidate>
+        <input id="name-input" type="text" name="name" class="popup__input popup__input_type_name" placeholder="Имя" required minlength="2" maxlength="40">
+        <span class="name-input-error popup__error"></span>
+        <input id="description-input" type="text" name="description" class="popup__input popup__input_type_description" placeholder="Занятие" required minlength="2" maxlength="200">
+        <span class="description-input-error popup__error"></span>
+        <button type="submit" class="button popup__button">Сохранить</button>
       </form>
     </div>
   </div>
@@ -50,10 +50,10 @@
       <button type="button" class="popup__close"></button>
       <h3 class="popup__title">Новое место</h3>
       <form class="popup__form" name="new-place">
-        <input type="text" id="place-name" name="place-name" class="popup__input popup__input_type_card-name" placeholder="Название" minlength="2" maxlength="30" required>
-        <span class="popup__input-error place-name-input-error"></span>
-        <input type="url" id="link" name="link" class="popup__input popup__input_type_url" placeholder="Ссылка на картинку" required>
-        <span class="popup__input-error link-input-error"></span>
+        <input id="card-name-input" type="text" name="place-name" class="popup__input popup__input_type_card-name" placeholder="Название" required minlength="2" maxlength="30">
+        <span class="name-input-error popup__error card-name-input-error"></span>
+        <input id="url-input" type="url" name="link" class="popup__input popup__input_type_url" placeholder="Ссылка на картинку" required>
+        <span class="name-input-error popup__error url-input-error"></span>
         <button type="submit" class="button popup__button">Сохранить</button>
       </form>
     </div>
@@ -66,6 +66,7 @@
     </div>
   </div>
 </div>
+
 <template id="card-template">
   <li class="places__item card">
     <img class="card__image" src="" alt="" />
